--- a/fdphd.bib
+++ b/fdphd.bib
@@ -160,7 +160,7 @@
 @article{mitrofanov2014near,
   title={Near-field probing of Mie resonances in single {TiO}$_2$ microspheres at terahertz frequencies},
   author={Mitrofanov, Oleg and Dominec, Filip and Ku{\v{z}}el, Petr and Reno, John L and Brener, Igal and Chung, {U-Chan} and Elissalde, Cathy and Maglione, Mario and Mounaix, Patrick},
-  journal={Opt. express},
+  journal={Opt. Express},
   volume={22},
   number={19},
   pages={23034--23042},
@@ -229,7 +229,7 @@
   school={Charles University, Prague}
 }
 @phdthesis{skoromets2013phd,
-  title={Tunable materials and structures for terahertz spectral range},
+  title={Tunable Mater. Struct. for terahertz spectral range},
   author={Skoromets, Volodymyr},
   year={2013},
   school={Charles University, Prague}
@@ -369,7 +369,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{kuzel2010gouy,
   title={Gouy shift correction for highly accurate refractive index retrieval in time-domain terahertz spectroscopy},
   author={Ku{\v{z}}el, P and N{\v{e}}mec, H and Kadlec, F and Kadlec, C},
-  journal={Optics express},
+  journal={Opt. Express},
   volume={18},
   number={15},
   pages={15338--15348},
@@ -506,7 +506,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{pendry2000negative,
   title={Negative refraction makes a perfect lens},
   author={Pendry, John Brian},
-  journal={Physical review letters},
+  journal={Phys. Rev. Lett.},
   volume={85},
   number={18},
   pages={3966},
@@ -573,7 +573,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{zhao2009repulsive,
   title={Repulsive Casimir force in chiral metamaterials},
   author={Zhao, R and Zhou, J and Koschny, Th and Economou, EN and Soukoulis, CM},
-  journal={Physical review letters},
+  journal={Phys. Rev. Lett.},
   volume={103},
   number={10},
   pages={103602},
@@ -583,7 +583,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{silveirinha2010comment,
   title={Comment on “Repulsive Casimir Force in Chiral Metamaterials”},
   author={Silveirinha, M{\'a}rio G and Maslovski, Stanislav I},
-  journal={Physical review letters},
+  journal={Phys. Rev. Lett.},
   volume={105},
   number={18},
   pages={189301},
@@ -649,7 +649,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{li2003photonic,
   title={Photonic band gap from a stack of positive and negative index materials},
   author={Li, Jensen and Zhou, Lei and Chan, CT and Sheng, P},
-  journal={Physical review letters},
+  journal={Phys. Rev. Lett.},
   volume={90},
   number={8},
   pages={083901},
@@ -677,7 +677,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{kocaman2011zero,
   title={Zero phase delay in negative-refractive-index photonic crystal superlattices},
   author={Kocaman, S and Aras, MS and Hsieh, P and McMillan, JF and Biris, CG and Panoiu, NC and Yu, MB and Kwong, DL and Stein, A and Wong, CW},
-  journal={Nature photonics},
+  journal={Nat. Photonics},
   volume={5},
   number={8},
   pages={499--505},
@@ -787,7 +787,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{li2009determination,
   title={Determination of the effective constitutive parameters of bianisotropic metamaterials from reflection and transmission coefficients},
   author={Li, Zhaofeng and Aydin, Koray and Ozbay, Ekmel},
-  journal={Physical review E},
+  journal={Phys. Rev. E},
   volume={79},
   number={2},
   pages={026610},
@@ -967,7 +967,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{zengerle1987light,
   title={Light propagation in singly and doubly periodic planar waveguides},
   author={Zengerle, R},
-  journal={Journal of modern optics},
+  journal={J. Mod. Opt.},
   volume={34},
   number={12},
   pages={1589--1617},
@@ -1093,7 +1093,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{mie1908beitrage,
   title={Beitr{\"a}ge zur Optik tr{\"u}ber Medien, speziell kolloidaler Metall{\"o}sungen},
   author={Mie, Gustav},
-  journal={Annalen der physik},
+  journal={Ann. Phys.},
   volume={330},
   number={3},
   pages={377--445},
@@ -1135,7 +1135,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{felbacq2005theory,
   title={Theory of mesoscopic magnetism in photonic crystals},
   author={Felbacq, Didier and Bouchitt{\'e}, Guy},
-  journal={Physical review letters},
+  journal={Phys. Rev. Lett.},
   volume={94},
   number={18},
   pages={183902},
@@ -1272,7 +1272,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{koschny2004effective,
   title={Effective medium theory of left-handed materials},
   author={Koschny, Th and Kafesaki, M and Economou, EN and Soukoulis, CM},
-  journal={Physical review letters},
+  journal={Phys. Rev. Lett.},
   volume={93},
   number={10},
   pages={107402},
@@ -1282,7 +1282,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{smith2000composite,
   title={Composite medium with simultaneously negative permeability and permittivity},
   author={Smith, David R and Padilla, Willie J and Vier, DC and Nemat-Nasser, Syrus C and Schultz, Seldon},
-  journal={Physical review letters},
+  journal={Phys. Rev. Lett.},
   volume={84},
   number={18},
   pages={4184},
@@ -1346,7 +1346,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{weiner2011electromagnetics,
   title={The electromagnetics of light transmission through subwavelength slits in metallic films},
   author={Weiner, John},
-  journal={Optics express},
+  journal={Opt. Express},
   volume={19},
   number={17},
   pages={16139--16153},
@@ -1379,7 +1379,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{kruk2012spatial,
   title={Spatial dispersion of multilayer fishnet metamaterials},
   author={Kruk, Sergey S and Powell, David A and Minovich, Alexander and Neshev, Dragomir N and Kivshar, Yuri S},
-  journal={Optics express},
+  journal={Opt. Express},
   volume={20},
   number={14},
   pages={15100--15105},
@@ -1389,7 +1389,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{lalanne2005theory,
   title={Theory of surface plasmon generation at nanoslit apertures},
   author={Lalanne, Ph and Hugonin, JP and Rodier, JC},
-  journal={Physical review letters},
+  journal={Phys. Rev. Lett.},
   volume={95},
   number={26},
   pages={263902},
@@ -1399,7 +1399,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{navarro2011dual,
   title={Dual-band double-negative-index fishnet metamaterial at millimeter-waves},
   author={Navarro-C{\'\i}a, Miguel and Garc{\'\i}a-Meca, Carlos and Beruete, Miguel and Mart{\'\i}nez, Alejandro and Sorolla, Mario},
-  journal={Optics letters},
+  journal={Opt. Lett.},
   volume={36},
   number={21},
   pages={4245--4247},
@@ -1436,7 +1436,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{jelinek2010fishnet,
   title={Fishnet metamaterials-rules for refraction and limits of homogenization},
   author={Jelinek, Lukas and Marques, Ricardo and Machac, Jan},
-  journal={Optics express},
+  journal={Opt. Express},
   volume={18},
   number={17},
   pages={17940--17949},
@@ -1516,7 +1516,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{navarro2011dual,
   title={Dual-band double-negative-index fishnet metamaterial at millimeter waves},
   author={Navarro-C{\'\i}a, Miguel and Garc{\'\i}a-Meca, Carlos and Beruete, Miguel and Mart{\'\i}nez, Alejandro and Sorolla, Mario},
-  journal={Optics letters},
+  journal={Opt. Lett.},
   volume={36},
   number={21},
   pages={4245--4247},
@@ -1559,7 +1559,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{marquus2009analytical,
   title={Analytical theory of wave propagation through stacked fishnet metamaterials},
   author={Marqu{\'U}s, R and Jelinek, L and Mesa, F and Medina, F},
-  journal={Optics express},
+  journal={Opt. Express},
   volume={17},
   number={14},
   pages={11582--11593},
@@ -1568,7 +1568,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 }
 
 @article{freire2008experimental,
-  title={Experimental demonstration of a $\mu$=- 1 metamaterial lens for magnetic resonance imaging},
+  title={Experimental demonstration of a $\mu$=- 1 metamaterial lens for Magn. Reson. Imaging},
   author={Freire, Manuel J and Marques, Ricardo and Jelinek, Lukas},
   journal={Appl. Phys. Lett.},
   volume={93},
@@ -1597,7 +1597,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{richter1995,
   title={Design considerations of form birefringent microstructures},
   author={Richter, Ivan and Sun, Pang-Chen and Xu, Fang and Fainman, Yeshayahu},
-  journal={Applied optics},
+  journal={Appl. Opt.},
   volume={34},
   number={14},
   pages={2421--2429},
@@ -1607,7 +1607,7 @@ Terahertz spectroscopy of ferroelectrics and related materials
 @article{kadlec2008,
   title={Materials with on-demand refractive indices in the terahertz range},
   author={Kadlec, Christelle and Kadlec, Filip and Ku{\v{z}}el, Petr and Blary, Karine and Mounaix, Patrick},
-  journal={Optics letters},
+  journal={Opt. Lett.},
   volume={33},
   number={19},
   pages={2275--2277},
@@ -1629,7 +1629,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{exter1989,
   title={Terahertz time-domain spectroscopy of water vapor},
   author={Van Exter, Martin and Fattinger, Ch and Grischkowsky, D},
-  journal={Optics letters},
+  journal={Opt. Lett.},
   volume={14},
   number={20},
   pages={1128--1130},
@@ -1670,7 +1670,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{leitenstorfer1999detectors,
   title={Detectors and sources for ultrabroadband electro-optic sampling: Experiment and theory},
   author={Leitenstorfer, A and Hunsche, S and Shah, J and Nuss, MC and Knox, WH},
-  journal={Applied physics letters},
+  journal={Appl. Phys. Lett.},
   volume={74},
   number={11},
   pages={1516--1518},
@@ -1680,7 +1680,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{gu1999generation,
   title={Generation of coherent cw-terahertz radiation using a tunable dual-wavelength external cavity laser diode},
   author={Gu, Ping and Chang, Fan and Tani, Masahiko and Sakai, Kiyomi and Pan, Ci-Ling},
-  journal={Japanese journal of applied physics},
+  journal={Japanese J. Appl. Phys.},
   volume={38},
   number={11A},
   pages={L1246},
@@ -1691,7 +1691,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{auston1984picosecond,
   title={Picosecond photoconducting Hertzian dipoles},
   author={Auston, DH and Cheung, KP and Smith, PR},
-  journal={Applied physics letters},
+  journal={Appl. Phys. Lett.},
   volume={45},
   number={3},
   pages={284--286},
@@ -1701,7 +1701,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{darrow1990subpicosecond,
   title={Subpicosecond electromagnetic pulses from large-aperture photoconducting antennas},
   author={Darrow, JT and Hu, BB and Zhang, X-C and Auston, DH},
-  journal={Optics letters},
+  journal={Opt. Lett.},
   volume={15},
   number={6},
   pages={323--325},
@@ -1711,7 +1711,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{hu1990optically,
   title={Optically steerable photoconducting antennas},
   author={Hu, BB and Darrow, JT and Zhang, X-C and Auston, DH and Smith, PR},
-  journal={Applied physics letters},
+  journal={Appl. Phys. Lett.},
   volume={56},
   number={10},
   pages={886--888},
@@ -1721,7 +1721,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{liu2003terahertz,
   title={Terahertz radiation from n-type GaAs with Be-doped low-temperature-grown GaAs surface layers},
   author={Liu, Kai and Krotkus, Arunas and Bertulis, K and Xu, Jingzhou and Zhang, X-C},
-  journal={Journal of applied physics},
+  journal={J. Appl. Phys.},
   volume={94},
   number={5},
   pages={3651--3653},
@@ -1731,7 +1731,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{zhang1992optoelectronic,
   title={Optoelectronic measurement of semiconductor surfaces and interfaces with femtosecond optics},
   author={Zhang, X-C and Auston, DH},
-  journal={Journal of applied physics},
+  journal={J. Appl. Phys.},
   volume={71},
   number={1},
   pages={326--338},
@@ -1803,7 +1803,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{kadlec2004optical,
   title={Optical rectification at metal surfaces},
   author={Kadlec, Filip and Ku{\v{z}}el, Petr and Coutaz, Jean-Louis},
-  journal={Optics letters},
+  journal={Opt. Lett.},
   volume={29},
   number={22},
   pages={2674--2676},
@@ -1813,7 +1813,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{kadlec2005study,
   title={Study of terahertz radiation generated by optical rectification on thin gold films},
   author={Kadlec, Filip and Kuzel, Petr and Coutaz, Jean-Louis},
-  journal={Optics letters},
+  journal={Opt. Lett.},
   volume={30},
   number={11},
   pages={1402--1404},
@@ -1823,7 +1823,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{ramakrishnan2012surface,
   title={Surface plasmon-enhanced terahertz emission from a hemicyanine self-assembled monolayer},
   author={Ramakrishnan, Gopakumar and Kumar, Nishant and Planken, Paul and Tanaka, Daisuke and Kajikawa, Kotaro},
-  journal={Optics express},
+  journal={Opt. Express},
   volume={20},
   number={4},
   pages={4067--4073},
@@ -1833,7 +1833,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{face1986high,
   title={High quality tantalum superconducting tunnel junctions for microwave mixing in the quantum limit},
   author={Face, DW and Prober, DE and McGrath, WR and Richards, PL},
-  journal={Applied physics letters},
+  journal={Appl. Phys. Lett.},
   volume={48},
   number={16},
   pages={1098--1100},
@@ -1870,7 +1870,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{doucas1992first,
   title={First observation of Smith-Purcell radiation from relativistic electrons},
   author={Doucas, G and Mulvey, JH and Omori, M and Walsh, J and Kimmitt, MF},
-  journal={Physical review letters},
+  journal={Phys. Rev. Lett.},
   volume={69},
   number={12},
   pages={1761},
@@ -1898,7 +1898,7 @@ lts.fzu.cz/pdf/d-js.pdf
   publisher={IOP Publishing}
 }
 @book{yin2012terahertz,
-  title={Terahertz imaging for biomedical applications: pattern recognition and tomographic reconstruction},
+  title={Terahertz imaging for biomedical applications: Pattern Recognit. and tomographic reconstruction},
   author={Yin, Xiaoxia and Ng, Brian W-H and Abbott, Derek},
   year={2012},
   publisher={Springer Science \& Business Media}
@@ -1915,7 +1915,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{wu1996ultrafast,
   title={Ultrafast electro-optic field sensors},
   author={Wu, Q and Zhang, X-C},
-  journal={Applied physics letters},
+  journal={Appl. Phys. Lett.},
   volume={68},
   number={12},
   pages={1604--1606},
@@ -2085,7 +2085,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{deinega2007subpixel,
   title={Subpixel smoothing for conductive and dispersive media in the finite-difference time-domain method},
   author={Deinega, Alexei and Valuev, Ilya},
-  journal={Optics letters},
+  journal={Opt. Lett.},
   volume={32},
   number={23},
   pages={3429--3431},
@@ -2118,7 +2118,7 @@ lts.fzu.cz/pdf/d-js.pdf
 @article{mandelshtam1997harmonic,
   title={Harmonic inversion of time signals and its applications},
   author={Mandelshtam, Vladimir A and Taylor, Howard S},
-  journal={The Journal of chemical physics},
+  journal={The J. Chem. Phys.},
   volume={107},
   number={17},
   pages={6756--6769},
@@ -2149,7 +2149,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{rakic1998optical,
   title={Optical properties of metallic films for vertical-cavity optoelectronic devices},
   author={Rakic, Aleksandar D and Djuri{\v{s}}ic, Aleksandra B and Elazar, Jovan M and Majewski, Marian L},
-  journal={Applied optics},
+  journal={Appl. Opt.},
   volume={37},
   number={22},
   pages={5271--5283},
@@ -2519,7 +2519,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{sun1989kramers,
   title={Kramers-Kronig relations in media with spatial dispersion},
   author={Sun, Jian Geng and Puri, Ashok},
-  journal={Optics communications},
+  journal={Opt. Commun.},
   volume={70},
   number={1},
   pages={33--37},
@@ -2577,7 +2577,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{zhang2006optical,
   title={Optical negative-index bulk metamaterials consisting of 2D perforated metal-dielectric stacks},
   author={Zhang, Shuang and Fan, Wenjun and Panoiu, NC and Malloy, KJ and Osgood, RM and Brueck, SR},
-  journal={Optics express},
+  journal={Opt. Express},
   volume={14},
   number={15},
   pages={6778--6787},
@@ -2828,7 +2828,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{valentine2009optical,
   title={An optical cloak made of dielectrics},
   author={Valentine, Jason and Li, Jensen and Zentgraf, Thomas and Bartal, Guy and Zhang, Xiang},
-  journal={Nature materials},
+  journal={Nat. Mater.},
   volume={8},
   number={7},
   pages={568--571},
@@ -2871,7 +2871,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{nemec2005highly,
   title={Highly tunable photonic crystal filter for the terahertz range},
   author={Nemec, H and Kuzel, P and Duvillaret, L and Pashkin, A and Dressel, M and Sebastian, MT},
-  journal={Optics letters},
+  journal={Opt. Lett.},
   volume={30},
   number={5},
   pages={549--551},
@@ -2889,7 +2889,7 @@ A Comparative Study of the Filter Diagonalization Method and Decimated Signal Di
 @article{alitalo2009electromagnetic,
   title={Electromagnetic cloaking with metamaterials},
   author={Alitalo, Pekka and Tretyakov, Sergei},
-  journal={Materials today},
+  journal={Mater. Today},
   volume={12},
   number={3},
   pages={22--29},
