--- a/t.tex
+++ b/t.tex
@@ -93,8 +93,11 @@
 \input{tables.tex}
 \printbibliography
 
+
+%\ExecuteBibliographyOptions{maxbibnames=16}
+
 \chapter*{List of own publications}
-% \input{fd_publications.tex} % TODO
+\input{fd_publications.tex} % TODO
 
 \label{enddocument} 
 \end{document}
