--- a/title.tex
+++ b/title.tex
@@ -73,9 +73,9 @@ Supervisor:				&\textbf{Mgr. Filip Kadlec, Dr.} \\
 					~	&Institute of Physics\\ 
 					~	&Academy of Sciences of the Czech Republic\\  %Na Slovance 2,  182 21 Praha 8, Czech Republic 
 Supervisor specialist:	&\textbf{Doc. Ing. Ivan Richter, Dr.} \\
-					~	&České vysoké učení technické v Praze\\ 
-					~	&Fakulta jaderná a fyzikálně inženýrská\\  
-					~	&Katedra fyzikální elektroniky\\
+					~	&Czech Technical University in Prague\\ 
+					~	&Faculty of Nuclear Sciences and Physical Engineering\\  
+					~	&Department of Physical Electronics\\
 Academic Year:			&\textbf{2015/16} \\
 Number of Pages:		&\textbf{\pageref{enddocument}} \\
 Keywords				&\textbf{metamaterials, photonic crystals, terahertz technology, computational electrodynamics, homogenization of effective media} \\
@@ -99,7 +99,7 @@ Teoretický základ práce vychází z elektrodynamiky prostředí s klasickou f
 
 Obecná teorie je doplněna příklady terahertzového chování různorodých periodických struktur, které bylo vypočteno metodou konečných diferencí v časové doméně (FDTD). V některých případech byly její výsledky podloženy jinými simulačními algoritmy nebo měřeními pomocí terahertzové spektroskopie v časové doméně.
 
-Srovnání  různých struktur si klade za cíl srozumitelnou formou předložit a vysvětlit nejpodstatnější principy. Podobné srovnání zřejmě v dosavadní literatuře chybělo. Klíčové výsledky spočívají v popisu přechodu mezi režimy metamateriálu a fotonického krystalu v periodickém poli dielektrických tyčinek a v dokladu toho, že k popisu chování řady uvedených struktur je zcela nezbytné uvažovat prostorovou dispersi. V neposlední řadě práce ukazuje možnosti simulačních skriptů, které autor vyvinul a uveřejnil na internetu s úmyslem podpořit další výzkum v této oblasti. 
+Srovnání  různých struktur si klade za cíl srozumitelnou formou prezentovat a vysvětlit nejpodstatnější principy. Podobné srovnání zřejmě v dosavadní literatuře chybělo. Klíčové výsledky spočívají v popisu přechodu mezi režimy metamateriálu a fotonického krystalu v periodickém poli dielektrických tyčinek a v důkazech toho, že k popisu chování řady uvedených struktur je zcela nezbytné uvažovat prostorovou dispersi. V neposlední řadě práce dokládá možnosti simulačních skriptů, které autor vyvinul a uveřejnil na internetu s úmyslem podpořit další výzkum v této oblasti. 
 
 \vspace{0mm}
 %\chapter*{Abstract} 
